--- a/datahub-ui/dev/weather-chart.html
+++ b/datahub-ui/dev/weather-chart.html
@@ -14,6 +14,7 @@
     <style>
         .chart {
             width: 400px;
+            background-color: #233541;
         }
 
         .chart-row {
